# BetelEngine

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.MD
.github/workflows/: cmake-multi-platform.yml
CMake/: CookAssets.cmake  VulkanCompileShaders.cmake
Content/: test.bem
Content/Editor/i18n/: en_US.lang
Content/Shaders/: WidgetBrushDefault.asset
Content/i18n/: en_US.lang  ja.lang  ru.lang
Scripts/BuildSources/: BuildGame.bat
Shaders/Game2D_Tilemap_TileDefault/: Geometry.glsl
Shaders/SpriteMasked/: SpriteMasked.frag  SpriteMasked.vert
Shaders/Test/: Test.frag  Test.vert
Shaders/Tilemap_LayerAtlasInstanced/: Tilemap_LayerAtlasInstanced.frag  Tilemap_LayerAtlasInstanced.vert
Shaders/TriangleUpscale/: TriangleUpscale.frag  TriangleUpscale.vert
Shaders/UI_Brush_Texture/: UI_Brush_Texture.frag  UI_Brush_Texture.vert
Source/Editor/ArgumentEvents/: UseAssetFactoryEvent.cpp
Source/Editor/AssetFactory/: AssetFactory.h  AssetFactoryLibrary.cpp  AssetFactoryLibrary.h
Source/Editor/AssetFactory/Default/: ShaderFactory.cpp
Source/Editor/AssetWriter/: AssetWriter.h
Source/Editor/Editor/: Editor.cpp  Editor.h  EditorDelegates.cpp  EditorDelegates.h  Mode.h
Source/Editor/Editor/Gizmo/: EditorGizmo.h
Source/Editor/Editor/Modes/: ObjectMode.cpp  ObjectMode.h
Source/Editor/Editor/Tools/: Tool.h
Source/Editor/EditorUI/: EditorImageLoader.h  EditorToolkit.h
Source/Editor/EditorUI/ObjectEditViews/: ObjectEditView.h  ObjectEditViewsFactory.cpp  ObjectEditViewsFactory.h
Source/Editor/EditorUI/WindowLibrary/: BetelColors.h  BetelDeferred.cpp  BetelDeferredCleanup.cpp  BetelDeferredCleanup.h  BetelDrag.h  BetelImages.cpp  BetelImages.h  BetelInputs.cpp  BetelInputs.h  BetelPickers.cpp  BetelPickers.h  BetelSelectable.h
Source/Editor/ImGui/: BetelImGui.cpp  BetelImGui.h
Source/Editor/ImGui/RenderLayer/: ImGuiLayer.cpp  ImGuiLayer.h
Source/Editor/Reflection/: IPropertyProvider.h  Property.h
Source/Editor/Toolkit/: Toolkit.h  ToolkitWindow.h
Source/Editor/ToolkitRenderLayer/: ToolkitRenderLayer.cpp  ToolkitRenderLayer.h
Source/Editor/TransactionQueue/: Context.cpp  Context.h
Source/Editor/TransactionQueue/Queue/: Queue.cpp  Queue.h  Transaction.h
Source/Runtime/AssetLoader/: AssetLoader.cpp  AssetLoader.h
Source/Runtime/AssetLoader/GC/: AssetGarbageCollector.h
Source/Runtime/AssetLoader/Objects/: BlameMaster.h
Source/Runtime/AssetLoader/Resources/: Archive.h
Source/Runtime/Assets/: Asset.cpp  Asset.h  AssetIO.h  AssetLibrary.cpp  AssetLibrary.h  AssetSmartPointers.h  AssetTypes.h
Source/Runtime/Assets/Artifact/: Artifact.cpp  Artifact.h
Source/Runtime/Assets/AssetFile/: AssetFile.cpp  AssetFile.h  AssetFileVariables.h
Source/Runtime/Assets/Bundle/: Bundle.h
Source/Runtime/Assets/Compression/: IAssetCompressor.h  LZ4AssetCompressor.h
Source/Runtime/Assets/Data/: Archive.h  SerialField.h  SerialObject.h
Source/Runtime/Assets/Files/: AssetFile.h  BundleFile.h
Source/Runtime/Assets/GC/: AssetGarbageCollector.h
Source/Runtime/Assets/IO/: AssetReader.h  AssetWriter.h  BundleReader.h  BundleWriter.h
Source/Runtime/Assets/Settings/: AssetSettings.h
Source/Runtime/Audio/: Audio.cpp  Audio.h  AudioSample.h
Source/Runtime/Core/: GuardedMain.cpp  main.cpp
Source/Runtime/Core/Application/: Application.cpp  Application.h  Arguments.cpp  Arguments.h  ArgumentsEventHandler.h
Source/Runtime/Core/Engine/: Engine.h
Source/Runtime/Core/Window/: Window.cpp  Window.h  WindowEvents.h  WindowManager.cpp  WindowManager.h
Source/Runtime/Debug/: Debug.h  DebugImageLoader.h
Source/Runtime/Debug/DebugImGui/: DebugImGui.cpp  DebugImGui.h
Source/Runtime/Delegate/: Delegate.cpp  Delegate.h  DelegateInstance.h  DelegatePointers.h
Source/Runtime/Engine/: Engine.cpp  Engine.h  EngineDelegates.cpp  EngineDelegates.h  Tickable.cpp  Tickable.h
Source/Runtime/GameFramework/: GameSettings.h
Source/Runtime/GameFramework/Settings/: GameSettings.h
Source/Runtime/ImGui/: BetelImGui.cpp  BetelImGui.h  ImGuiRenderable.h
Source/Runtime/ImGui/Betel/: BetelColors.cpp  BetelColors.h  BetelDeferred.h  BetelDrag.cpp  BetelDrag.h  BetelImageButton.h  BetelImages.cpp  BetelImages.h  BetelInputs.cpp  BetelInputs.h
Source/Runtime/ImGui/RenderLayer/: ImGuiLayer.cpp  ImGuiLayer.h
Source/Runtime/Input/: InputEvent.h  InputManager.cpp  InputManager.h
Source/Runtime/Log/: Logger.cpp  Logger.h
Source/Runtime/Materials/Assets/: Material.cpp  Material.h  MaterialAsset.cpp  MaterialAsset.h  Shader.cpp  Shader.h  ShaderAsset.cpp  ShaderAsset.h
Source/Runtime/Math/: Color.h  Math.h  Models.h  Quaternion.h  Transform.h  Vector.h  Vertex.h
Source/Runtime/Object/: FieldContainer.h  Object.cpp  Object.h  ObjectConcept.h  ObjectLibrary.cpp  ObjectLibrary.h  ObjectRef.cpp  ObjectRef.h  ObjectTypeLibrary.h
Source/Runtime/Platform/: Platform.cpp  Platform.h  platformdefs.h
Source/Runtime/Platform/Interface/: IPlatform.cpp  IPlatform.h
Source/Runtime/Platform/Linux/: LinuxPlatform.cpp  LinuxPlatform.h
Source/Runtime/Platform/Windows/: WindowsPlatform.cpp  WindowsPlatform.h
Source/Runtime/Render/: Composition.h  Layer.h  LayerDependency.h  Render.h  RenderEngine.h
Source/Runtime/Render/Objects/: Material.h  Shader.h
Source/Runtime/Render/Vulkan/: vkloader.cpp  vkloader.h
Source/Runtime/RenderV/: Composition.cpp  Composition.h  DependencyList.h  Engine.cpp  Engine.h  Layer.cpp  Layer.h  LayerDependency.h  LayerRef.h  Render.cpp  Render.h  Utility.cpp  Utility.h
Source/Runtime/RenderV/Objects/: ComputeShader.h  Material.cpp  Material.h  Shader.cpp  Shader.h
Source/Runtime/Resources/: Resource.h  ResourceLibrary.h
Source/Runtime/Settings/: Settings.h  SettingsManager.h
Source/Runtime/Settings/INI/: Ini.h
Source/Runtime/Timer/: Timer.cpp  Timer.h
Source/Runtime/UI/: Widget.cpp  Widget.h  WidgetBrush.h
Source/Runtime/Utility/: Concepts.h  Hash.h  StrSan.h
Source/Runtime/World/: Actor.h  Component.h  Entity.cpp  Entity.h  SceneView.cpp  SceneView.h  Utility.h  World.cpp  World.h
Source/Runtime/i18n/: Text.cpp  Text.h  TextManager.h
(+84 files in other folders)
